# annofab-3dpc-editor-cli

./: .flake8  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  LICENSE  Makefile  README.md  app.py  mypy.ini  pyproject.toml  ruff.toml  sandbox.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint-test.yml  publish-to-pypi.yml
anno3d/: __init__.py  app.py  calib_loader.py  file_paths_loader.py  simple_data_uploader.py  supplementary_id.py
anno3d/annofab/: client.py  constant.py  model.py  project.py  project_modifiers.py  task.py  uploader.py
anno3d/annofab/modifiers/: label_modifiers.py  project_modifiers.py
anno3d/annofab/specifiers/: extend_specs_label_specifiers_v1.py  extended_specs_label_specifiers_v1.py  label_specifiers.py  metadata_label_specifiers.py  project_specifiers.py  utils.py
anno3d/kitti/: calib.py  camera_horizontal_fov_provider.py  scene_uploader.py
anno3d/model/: annotation_area.py  common.py  file_paths.py  frame.py  image.py  input_files.py  kitti_label.py  label.py  preset_cuboids.py  project_specs_meta.py  scene.py  uploader.py
anno3d/util/: modifier.py  value_provider.py
docker/: Dockerfile
docs/: conf.py  index.md  index.rst  requirements.txt
docs/command_reference/: index.md
docs/user_guide/: annofab_point_cloud_format.md  command_sample.md  command_sample.rst  kitti_3d_object_detection.md  kitti_extension.md
docs/user_guide/command_sample/: create_project.md  make_kitti_data.md  make_scene.md  set_annotation_area.md  set_label.md  set_preset_cuboid_size.md  upload_kitti_data.md  upload_scene.md  upload_scene_to_s3.md
tests/: test_anno3d.py  test_app.py  test_calib_loader.py  test_file_paths_loader.py
tests/kitti/: test_calib.py
tests/model/: test_scene.py
tests/resources/: tm20_calib.txt
tests/util/: test_modifier.py  test_value_provider.py
