[tool.poetry]
name = "annofab-3dpc-editor-cli"
version = "0.2.2a1"
description = "Annofabの3次元プロジェクトを操作するためのCLIです。"
authors = ["Kurusugawa Computer Inc."]
repository="https://github.com/kurusugawa-computer/annofab-3dpc-editor-cli"
readme="README.md"
license = "MIT"
classifiers = [
        "Intended Audience :: Developers",
        "Environment :: Console",
        "Topic :: Utilities",
        "Operating System :: OS Independent",
]

packages = [
    { include = "anno3d" }
]

[tool.poetry.dependencies]
python = "^3.9"
annofabapi = ">=0.71.1"
dataclasses-json = ">=0.5.7,<1"
fire = ">=0.3.1,<1"
more-itertools = "^8.5.0"
numpy = "^1.23.0"
scipy = "^1.9.0"
boto3 = "^1.17.20"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^1.11"
flake8 = "^7.1"
black = "^22.6.0"
isort = "^5.10.1"
pylint = "^3.2"
# document
sphinx = "^5.1.1"
pydata-sphinx-theme = "^0.9.0"
types-requests = "^2.25.0"
myst-parser = "^0.18.1"

[tool.black]
line-length = 120
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | venv
    | dist
    | .git
    | .idea
    | .devcontainer
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 3

[tool.poetry.scripts]
anno3d = "anno3d.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
