[tool.poetry]
name = "annofab-3dpc-editor-cli"
version = "0.0.0" # `poetry-dynamic-versioning`を使ってGitHubのバージョンタグを取得している。変更不要
description = "Annofabの3次元プロジェクトを操作するためのCLIです。"
authors = ["Kurusugawa Computer Inc."]
repository="https://github.com/kurusugawa-computer/annofab-3dpc-editor-cli"
readme="README.md"
license = "MIT"
classifiers = [
        "Intended Audience :: Developers",
        "Environment :: Console",
        "Topic :: Utilities",
        "Operating System :: OS Independent",
]

packages = [
    { include = "anno3d" }
]

[tool.poetry.dependencies]
python = "^3.9"
annofabapi = "^1.2"
dataclasses-json = ">=0.5.7,<1"
fire = ">=0.3.1,<1"
more-itertools = "^8.5.0"

numpy = ">=1.23, <3"
scipy = "^1.9.0"
boto3 = "^1.17.20"


[tool.poetry.group.linter.dependencies]
ruff = "^0.8"
mypy = "^1.11"
flake8 = "^7.1"
pylint = "^3.2"


[tool.poetry.group.formatter.dependencies]
black = "^22.6.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"


[tool.poetry.group.documentation.dependencies]
sphinx = "^5.1.1"
pydata-sphinx-theme = "^0.9.0"
types-requests = "^2.25.0"
myst-parser = "^0.18.1"


[tool.poetry.group.dev-only.dependencies]
# 開発環境用のライブラリのバージョンを指定する必要がある場合に記載します。
# このセクションで指定したバージョンは、wheelファイルには影響しません。

# numpy 2.1以上でないと、Python 3.13用のwheelファイルがPyPIにないため、numpyのバージョンを指定する
numpy = [
    {version="^2.1", python=">=3.13"}
]
# scipy 1.14.1以上でないと、Python 3.13用のwheelファイルがPyPIにないため、scipyのバージョンを指定する
scipy = [
    {version="^1.14.1", python=">=3.13"}
]


[tool.black]
line-length = 120
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | venv
    | dist
    | .git
    | .idea
    | .devcontainer
)
'''


[tool.poetry.scripts]
anno3d = "anno3d.app:main"

[tool.poetry-dynamic-versioning]
enable = true


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"